# plm

./: .gitignore  .plmrc  .ppmrc  .travis.yml  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml  proto-lock.json  proto-package.json  sylk.json  test.py
.github/workflows/: book.yml  ci.yml  docker.yml  release.yml
.plm/: ppm.library.v1.rs  ppm.package.v1.rs  ppm.registry.v1.rs
.plm/builds/: build.pb
.sylk/cache/: save_1.json  save_10.json  save_11.json  save_12.json  save_13.json  save_14.json  save_15.json  save_16.json  save_17.json  save_18.json  save_19.json  save_2.json  save_20.json  save_21.json  save_22.json  save_23.json  save_24.json  save_25.json  save_26.json  save_27.json  save_28.json  save_29.json  save_3.json  save_30.json  save_31.json  save_32.json  save_33.json  (+17 more)
ci/: before-deploy.ps1  before-deploy.sh  cargo-out-dir.sh  install.sh  macos-install-packages.sh  ubuntu-install-packages.sh
docker/: Dockerfile  excludes.txt
docs/: book.toml
plm-cli/: .travis.yml  Cargo.toml  build.rs
plm-cli/src/: lib.rs  main.rs
plm-cli/src/commands/: add.rs  init.rs  install.rs  login.rs  publish.rs  update.rs
plm-cli/src/registry/: client.rs
plm-cli/src/utils/: configs.rs  errors.rs  helpers.rs  lock.rs  prompter.rs  tracing.rs
plm-core/: Cargo.toml  build.rs
plm-core/src/: lib.rs  manifest.rs
plm-core/src/utils/: auth.rs  dag.rs  error.rs  fs.rs  versioning.rs
plm-registry/: .env  Cargo.toml
plm-registry/migrations/2023-09-21-165837_create_users/: up.sql
plm-registry/migrations/2023-09-21-170033_create_organizations/: down.sql  up.sql
plm-registry/migrations/2023-09-21-170117_create_libraries/: down.sql  up.sql
plm-registry/migrations/2023-09-21-170155_create_user_organizations/: down.sql  up.sql
plm-registry/migrations/2023-09-21-193757_update_users_email_to_nullable/: down.sql  up.sql
plm-registry/migrations/2023-09-22-120334_add_partial_unique_indexes/: down.sql  up.sql
plm-registry/migrations/2023-09-24-090450_create_get_latest_version_function/: down.sql  up.sql
plm-registry/migrations/2023-09-24-111055_create_versions_and_dependencies/: down.sql  up.sql
plm-registry/migrations/2023-09-24-115211_remove_version_from_libraries/: down.sql  up.sql
plm-registry/migrations/2023-09-24-115519_refactor_partial_unique_index/: down.sql  up.sql
plm-registry/migrations/2023-09-24-120002_refactor_get_latest_versions/: down.sql  up.sql
plm-registry/migrations/2023-10-01-113109_add_description_and_fds_libraries/: down.sql  up.sql
plm-registry/src/: lib.rs  main.rs
plm-registry/src/api/: server.rs  service.rs
plm-registry/src/data/: builder.rs  models.rs  psql.rs  schema.rs
plm-registry/src/storage/: builder.rs  local.rs
plm-registry/src/utils/: auth.rs  config.rs  error.rs  tracing.rs  types.rs
ppm-cli/: .travis.yml  Cargo.toml
ppm-core/: Cargo.toml  build.rs
ppm-registry/: Cargo.toml
ppm-registry/src/: lib.rs  main.rs
ppm-registry/src/api/: server.rs
ppm-registry/src/data/: builder.rs
ppm-registry/src/storage/: builder.rs  local.rs
ppm-registry/src/utils/: config.rs  error.rs  types.rs
scripts/: bootstrap.sh  clone_and_publish.sh
(+41 files in other folders)
