
[package]
name = "plm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "plm"
path = "src/main.rs"


[dependencies]
plm-core = { path = "../plm-core" }
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
prost = "0.12.0"
prost-types = "0.12.0"
clap = {version = "4.4.3", features = ["derive"]}
exitcode = "1.1.2"
thiserror = "1.0.48"
colored = "2.0.4"
indicatif = "0.17.6"
dialoguer = "0.10.4"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
protobuf = "3.2.0"
prost-build = "0.12.1"
tonic-build = "0.10.0"
human-panic = "1.2.0"
sha2 = "0.10.7"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.10.0"
