[package]
name = "plm-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.107"
serde_yaml = "0.9.25"
serde = { version = "1.0.188", features = ["derive"] }
prost = "0.12.0"
prost-types = "0.12.0"
tonic = "0.10.0"
semver = "1.0.18"
dirs = "5.0.1"
protoc-bin-vendored = { version = "3.0.0" }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
tonic-build = "0.10.0"
protobuf = "3.2.0"
sha2 = "0.10.7"
hex = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
argon2 = "0.5.2"

[build-dependencies]
tonic-build = "0.10.0"
protoc-bin-vendored = { version = "3.0.0" }