[package]
name = "plm-registry"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.10.0"
plm-core = { path = "../plm-core" }
thiserror = "1.0.48"
serde_json = "1.0.107"
serde = "1.0.188"
diesel = {version = "2.1.1", features = ["postgres", "chrono"]}
dotenvy = "0.15.7"
chrono = "0.4.31"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
prost-types = "0.12.1"
diesel_migrations = "2.1.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
