[package]
name = "ppm-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.10.0"
ppm-core = { path = "../ppm-core" }
thiserror = "1.0.48"
serde_json = "1.0.107"
serde = "1.0.188"
